# proto-bench

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.opencode/context/project/: project-memory.md
benchmarks/: CMakeLists.txt  benchmark_runner.cpp
benchmarks/scenarios/: benchmark_results.cpp  benchmark_scenario.h  echo_benchmark.cpp  reliability_benchmark.cpp  throughput_benchmark.cpp
common/: CMakeLists.txt  schema_definition.md
common/include/: benchmark_service.h  benchmark_types.h  benchmark_utils.h  inprocess_framework.h  reference_service.h
common/src/: benchmark_utils.cpp  inprocess_framework.cpp  reference_service.cpp
docs/: ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md
frameworks/capnproto/: CMakeLists.txt  TODO.md
frameworks/capnproto/client/: capnproto_client.cpp  capnproto_client.h
frameworks/capnproto/schema/: benchmark.capnp
frameworks/capnproto/server/: capnproto_server.cpp  capnproto_server.h  server_main.cpp
frameworks/grpc/: CMakeLists.txt
frameworks/grpc/client/: grpc_client.cpp  grpc_client.h
frameworks/grpc/schema/: benchmark.proto
frameworks/grpc/server/: grpc_server.cpp  grpc_server.h  server_main.cpp
frameworks/orpc/schema/: README.md
frameworks/trpc-cpp/: CMakeLists.txt
frameworks/trpc-cpp/client/: trpc_client.cpp
frameworks/trpc-cpp/schema/: benchmark.proto
frameworks/trpc-cpp/server/: trpc_server.cpp
tests/: CMakeLists.txt
