# Tests for proto-bench

# TODO: Add testing framework (e.g., Google Test)
# find_package(GTest REQUIRED)

# Unit tests
# add_subdirectory(unit)

# Integration tests
# add_subdirectory(integration)

message(STATUS "Tests not yet implemented. Add test implementations in tests/unit/ and tests/integration/")
